<resources>
    <string name="app_name" translatable="false">AM Boost</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <string name="choose_training">Choose your daily training:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_challenging">Challenging</string>
    <string name="easy_description" translatable="false">1 min</string>
    <string name="medium_description" translatable="false">2 min</string>
    <string name="challenging_description" translatable="false">3 min</string>

    <string name="settings_header">Settings</string>
    <string name="settings_desc1">This app supports English and Polish languages.</string>
    <string name="settings_desc2">Simply change your devices language and restart the app!</string>
    <string name="settings_desc3">You can also turn on the device\'s \"Dark Mode\" and see the effect!</string>
    <string name="statistics_header">Statistics</string>
    <string name="stats_num_of_trainings_desc">Times you have trained:</string>
    <string name="stats_minutes_desc">Basically, you trained for:</string>
    <string name="congratulations_motivation">Congratulations, keep it up!</string>

    <string name="dont_give_up">Don\'t give up!</string>
    <string name="you_can_do_this">You can do this!</string>
    <string name="time_left_for_exercise">Time left for\nthis exercise:</string>
    <string name="total_time_left">Total time left:</string>
    <string name="alert_dialog_title">Do you want to quit?</string>
    <string name="alert_dialog_message">If you leave now current progress will be lost. Are you sure you want to quit?</string>
    <string name="alert_dialog_answer_negative">No</string>
    <string name="alert_dialog_answer_positive">Yes</string>

    <string name="congratulations_done">Congratulations!</string>
    <string name="you_just_finished_your_daily_training">You just finished your daily training.</string>
    <string name="finish_back_to_menu">Back to menu</string>

    <string name="balancing">Balancing</string>
    <string name="crunches">Crunches</string>
    <string name="flutter_kicks">Flutter Kicks</string>
    <string name="frog_jumps">Frog Jumps</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="push_ups">Push-ups</string>
    <string name="running_in_place">Running in place</string>
    <string name="squats">Squats</string>
    <string name="stretching">Stretching</string>

</resources>