<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/choose_training"
                android:textColor="@color/text_color"
                android:textSize="60sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <Button
                    android:id="@+id/button_easy"
                    android:layout_width="240dp"
                    android:layout_height="72dp"
                    android:background="@drawable/easy_button"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/difficulty_easy"
                    android:textColor="@color/buttons_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/easy_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/easy_description"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <Button
                    android:id="@+id/button_medium"
                    android:layout_width="240dp"
                    android:layout_height="72dp"
                    android:background="@drawable/medium_button"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/difficulty_medium"
                    android:textColor="@color/buttons_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/medium_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/medium_description"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <Button
                    android:id="@+id/button_challenging"
                    android:layout_width="240dp"
                    android:layout_height="72dp"
                    android:background="@drawable/challenging_button"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/difficulty_challenging"
                    android:textColor="@color/buttons_text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/challenging_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/challenging_description"
                    android:textColor="@color/text_color"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>